Changed UI design

--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -4,14 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.QuizFragment">
+    tools:context=".view.QuizFragment"
+    android:background="@color/colorPrimaryDark">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/quiz_close_btn"
-        android:layout_width="50dp"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="X"
+        android:fontFamily="monospace"
+        android:text="[X] close"
+        android:textColor="@color/colorAccent"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,9 +28,10 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="monospace"
         android:text="Loading Quiz..."
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/colorPrimary"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +43,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="12dp"
+        android:fontFamily="monospace"
         android:text="Question"
+        android:textColor="@color/colorLightText"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/quiz_close_btn"
         app:layout_constraintStart_toStartOf="@+id/quiz_title"
@@ -47,7 +55,9 @@
         android:id="@+id/quiz_question_number_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="0"
+        android:textColor="@color/white"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="@+id/quiz_question_number"
         app:layout_constraintStart_toStartOf="@+id/quiz_question_number"
@@ -68,8 +78,10 @@
         android:id="@+id/quiz_progress_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="10"
-        android:textSize="32sp"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/quiz_progress"
         app:layout_constraintEnd_toEndOf="@+id/quiz_progress"
         app:layout_constraintStart_toStartOf="@+id/quiz_progress"
@@ -82,7 +94,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="monospace"
         android:text="Fetching data..."
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +111,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="monospace"
         android:text="Option One"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="1dp"
+        app:cornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +129,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="monospace"
         android:text="Option Two"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="1dp"
+        app:cornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +147,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="monospace"
         android:text="Option Three"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="1dp"
+        app:cornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +165,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="monospace"
         android:text="Option Four"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="1dp"
+        app:cornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,22 +180,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="monospace"
         android:text="Verifying answer..."
         android:textSize="14sp"
+        android:textColor="@color/colorLightText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quiz_option_four" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/quiz_next_btn"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
+        android:fontFamily="monospace"
         android:text="Next Question"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimary"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="2dp"
+        app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        style="@style/Widget.MaterialComponents.Button.TextButton"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
