--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ListFragment">
+    android:background="@color/colorPrimaryDark"
+    tools:context=".view.ListFragment">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/list_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Let's Up Reviewer"
-        android:textColor="@color/black"
+        android:text="$quiz-app"
+        android:textColor="@color/colorPrimary"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
