--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -3,39 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.StartFragment">
+    tools:context=".view.StartFragment">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/start_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Let's Up Reviewer"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="$quiz-app"
+        android:textColor="@color/colorPrimary"
+        android:textSize="35sp"
+        app:fontFamily="monospace"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/start_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/start_feedback"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/start_feedback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Initializing"
-        android:textSize="15sp"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="35dp"
+        android:text="Initializing..."
+        android:textColor="@color/colorPrimary"
+        android:textSize="15sp"
+        app:fontFamily="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
