--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <color name="colorPrimary">#1FC742</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#FF3B00</color>
+    <color name="colorDark">#111111</color>
+    <color name="colorLightText">#929292</color>
 </resources>
