Finished quiz list UI

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,12 +17,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/list_item_image_gradient"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@drawable/list_image_gradient"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/list_item_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/list_item_image" />
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/list_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="monospace"
         android:text="Quiz Title"
         android:textColor="@color/colorPrimary"
@@ -32,14 +42,17 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/list_item_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="monospace"
+        android:justificationMode="inter_word"
         android:text="Quiz Description"
         android:textColor="@color/white"
         android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_item_title" />
 
@@ -48,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="monospace"
         android:text="Difficulty"
         android:textColor="@color/colorLightText"
@@ -58,20 +71,20 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/list_view_btn"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="monospace"
         android:text="View"
-        android:textColor="@color/colorPrimary"
-        app:strokeColor="@color/colorPrimary"
-        app:strokeWidth="2dp"
-        app:cornerRadius="0dp"
         android:textAllCaps="false"
+        android:textColor="@color/colorPrimary"
+        app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_item_diff"
-        style="@style/Widget.MaterialComponents.Button.TextButton"/>
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="2dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
